fixed some display issues on mobile

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -1551,7 +1551,7 @@ html[xmlns] .clearfix {
 		display: inline-block;
 	}
 	.cart-items {
-		float: left;
+		float: none;
 		width: 100%;
 
 	}
